--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body{
 
 .main aside button{
     display: block;
+    width: 200px;
 
     margin: 0 auto;
     margin-top: 30px;
@@ -85,9 +86,125 @@ body{
     border: none;
 }
 
+footer{
+    margin-top: 63px;
+    margin-bottom: 40px;
+}
 
-@media screen and (min-width: 375px) {
+.socials{
+    display: flex;
+    justify-content: center;
+}
+
+.socials li{
+    list-style: none;
+}
+
+.socials li:not(:last-child){
+    margin-right: 12px;
+}
+
+.socials a{
+    border: solid 1px white;
+    padding: 8px;
+    border-radius: 100%;
+}
+
+.socials li:first-child a{
+    padding: 8px 11px;
+}
+
+.socials li:last-child a{
+    padding: 8px 9px;
+}
+
+.socials i{
+    color: white;
+    font-size: 20px;
+}
+
+
+
+@media screen and (min-width: 376px) {
     body{
-        background-size: contain;
+        background-image: url(./images/bg-desktop.svg);
+    }
+}
+
+@media (min-width: 1025px){
+    body{
+        background-size: initial;
+    }
+
+    .logo{
+        margin-bottom: 95px;
+        margin-left: 80px;
+    }
+
+    .logo img{
+        width: 200px;
+    }
+
+    .main{
+        flex-direction: row;
+        align-items: start;
+    }
+
+    .main img{
+        width: 100%;
+        max-width: 700px;
+        
+        height: 100%;
+        max-height: 494px;
+        
+        margin-left: 81px;
+    }
+
+    .main aside{
+        max-width: 510px;
+        margin: 40px 38px 0px 45px;
+    }
+
+    .main aside h1{
+        max-width: 440px;
+        font-size: 2.5em;
+        text-align: initial;
+    }
+
+    .main aside p{
+        margin-top: 20px;
+        text-align: initial;
+    }
+
+    .main aside button{
+        margin-left: 0;
+        cursor: pointer;
+    }
+
+    .main aside button:hover{
+        background: var(--secondary-color);
+        color: white;
+    }
+
+    footer{
+        margin: 0;
+    }
+
+    .socials{
+        position: absolute;
+        bottom: 40px;
+        right: 80px;
+    }
+
+    .socials li:hover{
+        color: var(--secondary-color);
+    }
+
+    .socials a:hover{
+        /* border: solid 1px var(--secondary-color); */
+    }
+
+    .socials i:hover{
+        /* color: var(--secondary-color); */
     }
 }
